@@ -47,10 +47,13 @@ sudo pacman -S processing # installs processing-3.5.3  (community)
 
 Configure in `~/.jruby_art/config.yml`:-
 ```bash
-PROCESSING_ROOT: "/usr/share/processing"
-sketchbook_path: "/home/tux/sketchbook"
-MAX_WATCH: 30
+---
+processing_ide: false
+library_path: "/home/tux/.jruby_art"
+MAX_WATCH: 32
 JRUBY: true
+template: bare
+java_args: --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED
 ```
 
 Install JRubyArt
